# paper-assistant

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.cursor/skills/summarize-paper/: SKILL.md  example.md  template.md
src/pdf_reader_mcp/: __init__.py  app.py  cache.py  convert.py  prompts.py  server.py  toc.py  tools.py
